--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,21 @@
 {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "modules": false,
-          "targets": {
-            "browsers": "> 1%",
-            "uglify": true,
-            "node": "current"
-          }
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "modules": false,
+        "forceAllTransforms": true,
+        "targets": {
+          "browsers": "> 1%",
+          "node": "current"
         }
-      ],
-      "@babel/preset-react"
+      }
     ],
-    "plugins" : [
-        "@babel/plugin-proposal-class-properties"
-    ]
-  }
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-object-rest-spread",
+    "@babel/plugin-proposal-function-bind"
+  ]
+}
