--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "server": "node server/app.js"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +15,7 @@
     "axios": "^0.17.1",
     "body-parser": "^1.15.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "config": "^1.16.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "font-awesome": "^4.7.0",
@@ -34,6 +36,8 @@
   "devDependencies": {
     "@babel/core": "7.0.1",
     "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-loader": "8.0.2",
