--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^16.2.0",
     "react-google-maps": "9.4.5",
     "react-router-dom": "^4.2.2",
+    "react-spinkit": "^3.0.0",
     "react-spinners": "^0.2.6",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
